create and update bouquets
